# cv

./: Cargo.toml  README.md  _config.yml  index.md  justfile
_site/: index.html
data/: cv.json
docs/: index.html
docs/assets/css/: main_pdf.css
src/: main.rs  models.rs
templates/: index.html
