[package]
name = "mycv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tera = "1.19.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", features = [] }
